[package]
name = "polimorphism"
version = "0.7.2"
edition = "2021"
license="MIT"
author = "Nyx"
keywords = ["functional", "polymorphism"]
categories = ["parser-implementations", "rust-patterns", "development-tools"]
description = "Function overloading via a procedural macro"
readme = "README.md"
repository = "https://github.com/Nyx-art/polimorphism"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
